<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AtividadesActivity">

    <TextView
        style="@style/ContainerComponents"
        android:id="@+id/view"
        android:text="@string/meu_ritmo_e_rumo"
        android:textSize="30sp"
        android:textColor="@color/white"
        android:gravity="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <LinearLayout
        style="@style/ContainerTodosOsCantos"
        android:id="@+id/switchButtons"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@+id/view"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <TextView
            style="@style/ContainerTodosOsCantosAzul"
            android:id="@+id/viewSwitch1"
            android:text="@string/meu_calendario"
            android:gravity="center"
            android:textColor="@color/white"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_weight="1"
            />

        <TextView
            android:id="@+id/viewSwitch2"
            android:text="@string/minhas_atividades"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_weight="1"
            />

    </LinearLayout>




  </androidx.constraintlayout.widget.ConstraintLayout>