<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CalendarioActivity"
    android:background="@color/cinza_claro">

    <TextView
        style="@style/ContainerComponents"
        android:id="@+id/view"
        android:text="@string/meu_ritmo_e_rumo"
        android:textSize="30sp"
        android:textColor="@color/white"
        android:gravity="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <TextView
        android:id="@+id/tvOlaUsuario"
        android:text="Olá, usuário"
        android:textSize="25sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        app:layout_constraintTop_toBottomOf="@+id/view"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <LinearLayout
        style="@style/ContainerTodosOsCantos"
        android:id="@+id/switchButtons"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal"
        android:layout_marginTop="20dp"
        android:layout_marginHorizontal="20dp"
        app:layout_constraintTop_toBottomOf="@+id/tvOlaUsuario"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <TextView
            style="@style/ContainerTodosOsCantosAzul"
            android:id="@+id/tvSwitchCalendario"
            android:text="@string/meu_calendario"
            android:gravity="center"
            android:textColor="@color/white"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_weight="1"
            />

        <TextView
            android:id="@+id/tvSwitchAtividades"
            android:text="@string/minhas_atividades"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_weight="1"
            />

    </LinearLayout>

    <LinearLayout
        style="@style/ContainerTodosOsCantos"
        android:id="@+id/llCalendario"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="20dp"
        app:layout_constraintTop_toBottomOf="@+id/switchButtons"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <CalendarView
            android:id="@+id/calendarView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/switchButtons"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>
    </LinearLayout>



</androidx.constraintlayout.widget.ConstraintLayout>