<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:fillViewport="true"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/login"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:background="@drawable/background"
        tools:context=".LoginActivity">



        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:orientation="horizontal"
            android:gravity="center"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent">
            <ImageView
                android:id="@+id/logo_trabalho"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:src="@drawable/logo_trabalho_integrado"
                />

            <TextView
                android:id="@+id/tvAppName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_name"
                android:textSize="30sp"
                />
        </LinearLayout>




        <EditText
            android:id="@+id/edEmail"
            style="@style/Edit_Text"
            android:hint="Email"
            android:textColorHint="@color/cinza"
            android:drawableRight="@drawable/ic_email"
            android:inputType="textEmailAddress"
            android:layout_marginTop="30dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout"
            />

        <EditText
            android:id="@+id/edSenha"
            style="@style/Edit_Text"
            android:hint="Senha"
            android:textColorHint="@color/cinza"
            android:drawableRight="@drawable/ic_eye"
            android:inputType="numberPassword"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edEmail"
            />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btEntrar"
            style="@style/Button"
            android:text="@string/entrar"
            android:layout_marginTop="30dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edSenha"
            />

        <TextView
            android:id="@+id/tvCadastro"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_cadastro"
            android:textSize="18sp"
            android:textColor="@color/cinza"
            android:textStyle="bold"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="30dp"
            app:layout_constraintTop_toBottomOf="@+id/btEntrar"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:visibility="invisible"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvCadastro"
            />
        <!--        47:57-->

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>